<resources>
    <string name="app_name">TP2</string>
    <string name="matiere_web">Web</string>
    <string name="matiere_mobile">Mobile</string>
    <string name="matiere_dotnet">.NET</string>
    <string name="coef_3">3</string>
    <string name="coef_2">2</string>
    <string name="calculer">Calculer</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="score_description">Your score is: </string>
    <string name="send_sms">Send SMS</string>
    <string name="enter_phone">Enter your phone number</string>
</resources>